Update venv path

--- a/.github/workflows/main_wetroweb.yml
+++ b/.github/workflows/main_wetroweb.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           python-version: '3.10'
       
+      - name: Create and start virtual environment
+        run: |
+          python -m venv backend/venv
+          source backend/venv/bin/activate
+      
       - name: Install dependencies
         run: pip install -r backend/requirements.txt
         
@@ -33,7 +38,7 @@ jobs:
           name: python-app
           path: |
             backend
-            !venv/
+            !backend/venv/
 
   deploy:
     runs-on: ubuntu-latest
