Add run process

--- a/.github/workflows/main_wetroweb.yml
+++ b/.github/workflows/main_wetroweb.yml
@@ -54,9 +54,13 @@ jobs:
           name: python-app
           path: backend
       
-      - name: Start virtual environment
+      - name: Create and start virtual environment
         run: |
+          python -m venv backend/venv
           source backend/venv/bin/activate
+        
+      - name: Install dependencies
+        run: pip install -r backend/requirements.txt
       
       - name: Run Django
         run: python backend/manage.py runserver
